Fixed Layout issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 
 body {
     width: 80%!important;
-    padding-left: 300px!important;
+    padding-left: 200px!important;
+    padding-right: 200px!important;
     display: flex;
     flex-direction: row;
 }
